# fuzoku

./: .env  Cargo.toml  README.md  docker-compose.yml
app/: Dockerfile
app/data/: girls.json
app/locales/: en.ftl  ja.ftl  zh.ftl
app/src/: data.rs  main.rs
app/src/handlers/: admin.rs  girls.rs  home.rs  mod.rs  system.rs
app/static/: geo.html
app/templates/: admin.html  admin_girls.html  admin_girls_edit.html  admin_girls_new.html  girl_detail.html  girls.html  home.html  layout.html  login.html  system.html
letsencrypt/: acme.json
