[package]
name = "fuzoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.5", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
askama = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
infer = "0.15.0"
tower = { version = "0.4.13", features = ["full"]}
tower-http = { version = "0.5.2", features = ["full"]}
fluent = "0.16.1"
fluent-bundle = "0.15.3"
fluent-syntax = "0.11.1"
fluent-resmgr = "0.0.7"
unic-langid = "0.9"
image = {version =  "0.24.6", features = ["webp-encoder"]}
rand = "0.8"
